syntax = "proto3";

package company;

import "app/protos/types/company.proto";

message AllCompaniesRequest {
    oneof kind {
        uint64 related_user_bank_account_id = 1;
        // to query every company
        bool globally = 2;
    }
}

message AllCompaniesResponse {
    repeated types.Company companies = 2;
}
